[package]
name = "serial-number"
version = "0.1.1"
edition = "2021"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
readme = "README.md"
description = "Library implements serial-numbers to protect software (PKVS)."
repository = "https://github.com/DenisKolodin/serial-number"
license = "MIT/Apache-2.0"

[dependencies]
thiserror = "1.0.38"
